# chat-agent

./: .env.example  .gitignore  API_SERVER.md  CLAUDE.md  LANGFUSE_GUIDE.md  MCP_INTEGRATION.md  MCP_MIGRATION.md  README.md  REFACTORING.md  SESSION_MANAGEMENT.md  langfuse_config.yaml  pyproject.toml  requirements.txt  test_debug_mcp.py  test_dynamic_prompt.py  test_final.py  test_final_integration.py  test_mcp_instructions.py  test_mcp_integration.py  test_mcp_v2.py  test_memory_tools.py  test_prompt_with_instructions.py  test_stream.js  test_stream.py  test_streaming.py  test_tool_call.py
examples/: api_client_curl.sh  api_client_example.py
src/: __init__.py  api_server.py  main.py
src/agents/: chat_agent.py
src/prompts/: __init__.py  prompt_builder.py  system_prompt_builder.py  system_prompts.py
src/tools/: __init__.py  mcp_client.py  mcp_tools.py  mcp_tools_v2.py  memory_tools.py  weather_service.py
src/tools/legacy/: mcp_client.py
src/utils/: __init__.py  agent_factory.py  json_fixer.py  langfuse_config.py  session_store.py
